# diverk

./: .gitattributes  .gitignore  LICENSE  README.md  default.nix  hie.yaml  install-hooks.sh  shell-obelisk.sh  shell.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: main.hs
common/: common.cabal
common/src/Common/: Api.hs  Model.hs  Route.hs
dep/reflex-platform/: github.json
frontend/: frontend.cabal
frontend/src/: About.hs  Blob.hs  Browse.hs  Configuration.hs  Frontend.hs  Home.hs  LocalStorage.hs  Navbar.hs  Request.hs  Search.hs  Theme.hs  Tree.hs  Widget.hs  Widgets.hs
frontend/src-bin/: main.hs
frontend/src/JSDOM/Storage/: Extra.hs
frontend/src/Page/: About.hs  Browse.hs  Search.hs  Settings.hs
frontend/src/Reflex/: Extra.hs
frontend/src/Widget/: Icon.hs  Navbar.hs
hooks/: pre-commit
static/: default.nix
static/src/: default.nix  node-packages.nix  node2nix.nix  package.json  tailwind.config.js
static/src/css/: styles.css
