cabal-version: 2.4
name: frontend
version: 0.1
build-type: Simple

common defaults
  default-language: Haskell2010
  ghc-options:
    -Wall
    -O
    -fno-show-valid-hole-fits
    -- unsafe code
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -- unneeded code
    -Widentities
    -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  default-extensions:
    AutoDeriveTypeable
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MonadFailDesugaring
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    aeson,
    base,
    base64,
    common,
    containers,
    extra,
    jsaddle,
    jsaddle-dom,
    lens,
    lens-aeson,
    obelisk-executable-config-lookup,
    obelisk-frontend,
    obelisk-generated-static,
    obelisk-route,
    reflex-dom-core,
    text,
  exposed-modules:
    Frontend
  other-modules:
    Configuration
    LocalStorage
    Reflex.Extra
    Tree

executable frontend
  import: defaults
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
    base,
    common,
    frontend,
    obelisk-frontend,
    obelisk-generated-static,
    obelisk-route,
    reflex-dom,
  ghc-options: -threaded
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
